--- a/main.html
+++ b/main.html
@@ -19,4 +19,38 @@
       margin-bottom: 15px;
     }
   </style>
-</h
+</head>
+<body>
+
+  <!-- Sign Up button -->
+  <button type="button" class="btn btn-info" id="signup-btn" data-toggle="modal" data-target="#openModal">
+    Sign Up
+  </button>
+
+  <!-- Modal -->
+  <div class="modal fade" id="openModal" tabindex="-1" role="dialog">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <!-- Close button with Cypress-compatible class -->
+        <button type="button" class="btn-close" data-dismiss="modal">&times;</button>
+        
+        <h4>Create Account</h4>
+        <form onsubmit="event.preventDefault();">
+          <label for="email">Email address</label>
+          <input type="email" class="form-control" placeholder="Enter email" id="email">
+
+          <label for="password">Password</label>
+          <input type="password" class="form-control" placeholder="Password" id="password">
+          <div class="text-danger">Your information is safe with us</div>
+
+          <label for="confirmPassword">Confirm Password</label>
+          <input type="password" class="form-control" placeholder="Confirm Password" id="confirmPassword">
+
+          <button type="submit" class="btn btn-success submit-btn">Submit</button>
+        </form>
+      </div>
+    </div>
+  </div>
+
+</body>
+</html>
